--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -34,17 +34,17 @@
             app:layout_constraintTop_toBottomOf="@+id/signup_title_text" />
 
         <ImageView
-            android:id="@+id/username_icon"
+            android:id="@+id/lock_icon"
             android:layout_width="@dimen/material_list_icon_size"
             android:layout_height="@dimen/material_list_icon_size"
             android:src="@drawable/ic_person_black_24dp"
-            app:layout_constraintBottom_toBottomOf="@+id/username_text"
+            app:layout_constraintBottom_toBottomOf="@+id/lock_ssid_text"
             app:layout_constraintStart_toStartOf="@+id/guideline_16dp"
-            app:layout_constraintTop_toTopOf="@+id/username_text"
+            app:layout_constraintTop_toTopOf="@+id/lock_ssid_text"
             android:tint="@color/colorPrimary"/>
 
         <EditText
-            android:id="@+id/username_text"
+            android:id="@+id/lock_ssid_text"
             android:layout_width="0dp"
             android:layout_height="@dimen/material_list_single_line_without_avatar_normal_height"
             android:gravity="center_vertical"
@@ -57,12 +57,12 @@
             app:layout_constraintTop_toBottomOf="@+id/username_title" />
 
         <View
-            android:id="@+id/username_seperator"
+            android:id="@+id/lock_seperator"
             android:layout_width="wrap_content"
             android:layout_height="0.5dp"
             android:background="#d9d9d9"
-            app:layout_constraintTop_toBottomOf="@+id/username_text"
-            app:layout_constraintStart_toEndOf="@id/guideline_72dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/lock_ssid_text"
+            app:layout_constraintStart_toEndOf="@+id/guideline_72dp"/>
 
         <TextView
             android:id="@+id/password_title"
@@ -74,7 +74,7 @@
             android:textColor="@color/material_subheader_text_color_default"
             android:textSize="@dimen/material_subheader_text_size"
             app:layout_constraintStart_toStartOf="@+id/guideline_16dp"
-            app:layout_constraintTop_toBottomOf="@+id/username_seperator" />
+            app:layout_constraintTop_toBottomOf="@+id/lock_seperator" />
 
         <EditText
             android:id="@+id/password_text"
@@ -105,7 +105,7 @@
             android:layout_height="0.5dp"
             android:background="#d9d9d9"
             app:layout_constraintTop_toBottomOf="@+id/password_text"
-            app:layout_constraintStart_toEndOf="@id/guideline_72dp"/>
+            app:layout_constraintStart_toEndOf="@+id/guideline_72dp"/>
 
         <EditText
             android:id="@+id/password_confirm_text"
@@ -126,7 +126,7 @@
             android:layout_height="0.5dp"
             android:background="#d9d9d9"
             app:layout_constraintTop_toBottomOf="@+id/password_confirm_text"
-            app:layout_constraintStart_toEndOf="@id/guideline_72dp"/>
+            app:layout_constraintStart_toEndOf="@+id/guideline_72dp"/>
 
         <TextView
             android:id="@+id/email_title"
@@ -169,7 +169,7 @@
             android:layout_height="0.5dp"
             android:background="#d9d9d9"
             app:layout_constraintTop_toBottomOf="@+id/email_text"
-            app:layout_constraintStart_toEndOf="@id/guideline_72dp"/>
+            app:layout_constraintStart_toEndOf="@+id/guideline_72dp"/>
 
         <TextView
             android:id="@+id/name_title"
@@ -212,7 +212,7 @@
             android:layout_height="0.5dp"
             android:background="#d9d9d9"
             app:layout_constraintTop_toBottomOf="@+id/name_text"
-            app:layout_constraintStart_toEndOf="@id/guideline_72dp"/>
+            app:layout_constraintStart_toEndOf="@+id/guideline_72dp"/>
 
         <Button
             android:id="@+id/signup_button"
