--- a/app/src/main/res/layout/fragment_device_setup.xml
+++ b/app/src/main/res/layout/fragment_device_setup.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -34,7 +33,7 @@
             app:layout_constraintTop_toBottomOf="@+id/setup_title_text" />
 
         <ImageView
-            android:id="@+id/lock_icon"
+            android:id="@+id/lock_image"
             android:layout_width="@dimen/material_list_icon_size"
             android:layout_height="@dimen/material_list_icon_size"
             android:src="@drawable/ic_lock_black_24dp"
@@ -179,7 +178,5 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_begin="@dimen/material_list_text_second_position_edge_margin_start" />
-
-
     </android.support.constraint.ConstraintLayout>
 </android.support.v4.widget.NestedScrollView>
